--- a/style.css
+++ b/style.css
@@ -307,6 +307,7 @@ a{
     padding:3rem 0;
     display: flex;
     flex-direction: column;
+    /* projects card ek ke niche ek  */
     gap:120px;
 }
 .project-card{
@@ -328,7 +329,7 @@ a{
     right:0;
     bottom: 0;
     background-color: #1f1f1f9a;
-    transform: scaleX(1);
+    /* transform: scaleX(1); */
     z-index:0;
 
 }
@@ -369,7 +370,7 @@ a{
     
 }
 .project-number-left{
-    right:-40px;
+    left:-40px;
     top:-45px;
 }
 .project-content{
